XWIKI-18851: Improve resubmit handling
  * Fix wrong java API and test